# new_latex_application

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.validation  README.md  docker-compose.validation.yml  docker-compose.yml  package-lock.json  pyproject.toml  requirements.lock.txt  requirements.txt  requirements.validation-order.txt
configs/: app.yaml  logging.yaml  pipeline.yaml
docs/: architecture.md  deployment.md  developer_guide.md  environment_validation.md
reports/: environment_validation_findings.md  environment_validation_report.json  environment_validation_report.md
scripts/: install_linux.sh  install_windows.ps1
src/new_latex_app/: __init__.py
src/new_latex_app/application/: __init__.py  dto.py  pipeline.py  services.py
src/new_latex_app/domain/: __init__.py  entities.py  enums.py  exceptions.py
src/new_latex_app/domain/ports/: __init__.py  math_ocr.py  (+17 more)
src/new_latex_app/infrastructure/: __init__.py  config.py  di.py  file_staging.py  logging_config.py  workspace.py
src/new_latex_app/presentation/: __init__.py  cli.py  flask_app.py
tests/: __init__.py
tests/unit/: __init__.py  test_chemistry_processor.py  test_config.py  test_di.py  test_diagram_processor.py  test_document_loader.py  test_export_manager.py  test_flask_app.py  test_image_preprocessor.py  test_latex_builder.py  test_layout_detector.py  test_paddle_ocr.py  test_pdf_compiler.py  test_pix2text_math_ocr.py  test_question_segmenter.py  test_rule_engine.py  test_spatial_block_segmenter.py  test_structure_analyzer.py  test_validation_engine.py
tools/: validate_environment.py
(+27 files in other folders)
