[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "new-latex-app"
version = "0.1.0"
description = "Offline educational document to LaTeX foundation."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "new_latex_app contributors" }]
license = { text = "MIT" }
dependencies = [
    "PyYAML>=6.0.1",
    "python-dotenv>=1.0.1",
    "Jinja2>=3.1.4",
    "pylatexenc>=2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
]
document-ai = [
    "PyMuPDF>=1.24.0",
    "pdf2image>=1.17.0",
    "opencv-python-headless>=4.10.0.0",
    "paddleocr>=2.8.0",
    "pix2text>=1.1.0",
    "img2table>=1.2.11",
]

[project.scripts]
new-latex-app = "new_latex_app.presentation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["new_latex_app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
